[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]
# Gossip Protocol
gossipod = { git = "https://github.com/TheDhejavu/gossipod" }

# Serialize and Deserialize
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3"

# Logging and Tracing
env_logger = "0.11.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }

# Error Handling
anyhow = { version = "1.0.56", features = ["backtrace"] }

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7.1", features = ["codec"] }
async-trait = "0.1.81"
log = "0.4.22"

# Command Line Parse
clap = { version = "4.5.20", features = ["derive"] }

# Cache lib
foyer = "0.12"
moka = { version = "0.12.8", features = ["future"] }

# Http Framework
axum = "0.7.7"